- a link of class button looks smaller than input element of class button (bnc#588629) - cleaned up style.css and yast.css

--- a/webclient/public/stylesheets/yast.css
+++ b/webclient/public/stylesheets/yast.css
@@ -47,15 +47,17 @@
   top: 10px;
 }*/  
 
-.content { 
+/* Unused CSS property */
+/* .content {  */
 /*margin-left: 15.5em;*/
 /*margin-top: 10em;*/
-}
+/* } */
 
-.notifications {
+/* Already exist in style.css */
+/*.notifications {
  font-size: 1.5em;
  color: red;
-}
+}*/
 
 #no_js_warning {
   background-color:#fcfdde;
@@ -64,13 +66,15 @@
   padding: 5px 0px 5px 0px
 }
 
-#status_patches {
+/* Already exist in style.css */
+/*#status_patches {
   margin-left: 2em;
-}
+}*/
 
-#status_status {
+/* Already exist in style.css */
+/*#status_status {
   margin-left: 2em;
-}
+}*/
 
 #status_health_icon  {
   margin-left: 2em;
@@ -206,12 +210,13 @@ table {
   margin-top: 5px;
 }
 
-a {
+/* Already exist in style.css */
+/*a {
   color: #000000;
   text-decoration: none;
-}
+}*/
 
-a:hover {
+/*a:hover {
   color: blue;
   text-decoration: underline
-}
+}*/
