add license to remaining files in base-ui

--- a/webclient/public/stylesheets/jquery-ui-1.7.2.custom-tabs.css
+++ b/webclient/public/stylesheets/jquery-ui-1.7.2.custom-tabs.css
@@ -1,3 +1,7 @@
+/*
+* Source: jQuery tab CSS Framework
+*/
+
 .fieldset-group.ui-corner-all {
   -moz-border-radius-bottomleft:0px;
   -moz-border-radius-bottomright:0px;
