disable all elements after submit (bnc#600011)

--- a/plugins/time/app/views/time/index.rhtml
+++ b/plugins/time/app/views/time/index.rhtml
@@ -106,8 +106,9 @@
   <!-- FIXME move javascript function outside of index -->
   <% javascript_tag do -%>
     function submitTime() {
-		if($("timeForm").valid() ) {
+		if($("#timeForm").valid() ) {
 		  $('#progress').show();
+      $("#timeForm *").disable(); //disable all elements after submit
 		  return true;
 		}
     };
