--- a/plugins/time/app/views/time/index.rhtml
+++ b/plugins/time/app/views/time/index.rhtml
@@ -108,7 +108,7 @@
     function submitTime() {
 		if($("#timeForm").valid() ) {
 		  $('#progress').show();
-      $("#timeForm *").disable(); //disable all elements after submit
+      $("#timeForm *").attr('readonly','readonly'); //disable all elements after submit
 		  return true;
 		}
     };
