--- a/plugins/permissions/public/stylesheets/checktree.css
+++ b/plugins/permissions/public/stylesheets/checktree.css
@@ -41,10 +41,10 @@ ul.tree li .arrow {
 	background: transparent no-repeat 0 4px;
 }
 ul.tree li .collapsed {
-	background-image: url(../collapsed.gif);
+	background-image: url(../images/collapsed.gif);
 }
 ul.tree li .expanded {
-	background-image: url(../expanded.gif);
+	background-image: url(../images/expanded.gif);
 }
 
 ul.tree li .checkbox {
@@ -54,11 +54,11 @@ ul.tree li .checkbox {
 	margin: 0;
 	cursor: pointer;
 	float: left;
-	background: url(../check0.gif) no-repeat 0 0px;
+	background: url(../images/check0.gif) no-repeat 0 0px;
 }
 ul.tree li .checked {
-	background-image: url(../check2.gif);
+	background-image: url(../images/check2.gif);
 }
 ul.tree li .half_checked {
-	background-image: url(../check1.gif);
+	background-image: url(../images/check1.gif);
 }
