input is not pair tag!

--- a/plugins/services/app/views/services/index.rhtml
+++ b/plugins/services/app/views/services/index.rhtml
@@ -184,7 +184,7 @@ function select_status (val) {
 
 <form action="#" id="quicksearch">
   <label><%= _("Quick Search") %></label>
-  <input type="text" id="service_search"></input>
+  <input type="text" id="service_search">
 </form>
 
 <div id="services" class="accordion">
