--- a/plugins/software/app/views/patch_updates/_patches.html.erb
+++ b/plugins/software/app/views/patch_updates/_patches.html.erb
@@ -28,7 +28,7 @@
 <table summary="" class="patches" <%= @patch_updates.empty? ? "style=\"visibility: hidden;\"" : "" %> >
   <tr>
     <th class="first checkbox" width=8% >
-      <input type="checkbox" name="All" onclick="check_all()" id="All" style="float: left;"></input>
+      <input type="checkbox" name="All" onclick="check_all()" id="All" style="float: left;">
       <div style="margin-top: 2px;"><%=_("Check")%></div>
     </th>
     <th width=5%><%=_("Kind")%></th>
