--- a/plugins/software/app/views/repositories/index.html.erb
+++ b/plugins/software/app/views/repositories/index.html.erb
@@ -178,7 +178,7 @@
 
     <form action="#" id="quicksearch">
       <label><%= _("Quick Search") %></label>
-      <input type="text" id="repo_search"></input>
+      <input type="text" id="repo_search">
     </form>
 
     <% if !disabled %>
