--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -72,7 +72,8 @@ a {
   font-weight:bold;
   text-decoration: none;
   font-size:11px;
-  border-bottom:1px dotted #8e908b;
+/*   border-bottom:1px dotted #8e908b; */
+  border-bottom:1px dotted #1e90ff;
 }
 a:hover {
   color: #444;
@@ -145,7 +146,7 @@ a.button, input.button, input[type="submit"], input[type="button"] {
 a.button {
   /* CSS Hack for IE8 */
   padding /*\**/: 2px 10px\9;
-  color:#333 !important;
+  color /*\**/: #333\9 !important
 }
 
 /* CSS Hack for FF */
