- same width of both select boxes (bnc#596033)

--- a/plugins/time/app/views/time/_timezones.rhtml
+++ b/plugins/time/app/views/time/_timezones.rhtml
@@ -31,4 +31,4 @@ end
 list.sort!
 %>
 <%= select_tag "timezone",
-  options_for_select(list, central), :disabled=> disabled %>
+  options_for_select(list, central), :disabled=> disabled, :style => "width: 300px;" %>
