--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -637,13 +637,10 @@ fieldset {
 fieldset p {
   clear: both;
   margin-bottom: 0.5em;
+  margin-top: 0.5em;
 }
 
-fieldset.smallfields label {
-  width: 5em;
-}
-
-fieldset.smallfields input[type="text"] {
+fieldset.small-fields input[type="text"] {
   width: 10em;
 }
 
@@ -660,7 +657,7 @@ fieldset label {
 }
 
 fieldset.small-labels label {
-  width: 5em;
+  width: 8em;
 }
 
 legend {
@@ -686,14 +683,6 @@ label.error {
   padding: 0 0 0 0;
   margin: 2px;
   width: auto; 
-}
-
-label.radio-right {
-    display:block;
-    float:left;
-    width:auto !important;
-    line-height: 1.5em;
-    margin-bottom: 1em;
 }
 
 fieldset fieldset {
